[tool.poetry]
name = "crypto_history"
version = "1.2.b14"
description = "crypto_history is a python package for extracting history of crypto-currencies from various exchanges and presenting them in a tabular data-format"
authors = ["Vikramaditya Gaonkar <vikramaditya91@gmail.com>"]
license = "GNU GPL"

[tool.poetry.dependencies]
python = "^3.8"
xarray = ">=0.17,<2022.10"
python-binance = "^1.0.12"
SQLAlchemy = "^1.4.5"


[tool.poetry.dev-dependencies]
tox = "^3.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
